--- a/src/components/ui/button.astro
+++ b/src/components/ui/button.astro
@@ -1,7 +1,7 @@
 <button
   data-controller="button"
   data-action="mouseenter->button#hover"
-  class="h-10 min-w-20 cursor-pointer bg-black px-3 text-white"
+  class="h-10 min-w-20 cursor-pointer bg-black px-3 text-sm text-white"
 >
   <span
     class="pointer-events-none block overflow-hidden leading-tight"
