--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -9,7 +9,7 @@ const { class: classes, ...attrs } = Astro.props;
 <a
   data-controller="button"
   data-action="mouseenter->button#hover"
-  class="h-10 min-w-20 cursor-pointer bg-black px-3 text-white"
+  class="inline-block cursor-pointer text-zinc-900"
   {...attrs}
 >
   <span
