--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -1,5 +1,5 @@
 <section class="effect-002 w-full">
-  <div class="effect-container p-4 py-12 sm:p-6 lg:grid lg:p-12">
+  <div class="effect-container p-4 py-12 sm:p-6 lg:p-12">
     <div>
       <h2 class="text-2xl">About me</h2>
     </div>
@@ -9,9 +9,9 @@
         <div class="aspect-square h-auto w-[16rem] bg-zinc-200 lg:w-[24rem]">
         </div>
       </div>
-      <div class="max-w-[52em]">
+      <div class="@container w-full max-w-[52em]">
         <h2
-          class="paragraph text-3xl font-light tracking-wide text-black sm:text-4xl xl:text-[52px]/15"
+          class="paragraph text-[clamp(1.875rem,3.25vw,3rem)] leading-[1.25] tracking-wide text-black"
         >
           <!--
           <h2
