--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,6 +1,8 @@
 ---
 import Navigation from "../components/ui/navigation.astro";
 import "../styles/global.css";
+// import "@fontsource/manrope";
+import "@fontsource-variable/inter";
 ---
 
 <!doctype html>
@@ -13,7 +15,7 @@ import "../styles/global.css";
     <title>Astro Basics</title>
     <script src="../js/index.ts"></script>
   </head>
-  <body class="bg-zinc-50 text-zinc-800">
+  <body class="bg-zinc-50 font-light text-zinc-800">
     <Navigation />
     <slot />
     <div class="overlay pointer-events-none fixed inset-0 z-1000"></div>
