--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,6 +3,7 @@ import Welcome from "../components/Welcome.astro";
 import Works from "../components/Works.astro";
 import Layout from "../layouts/Layout.astro";
 import About from "../components/About.astro";
+import Experience from "../components/Experience.astro";
 
 // Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
 // Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
@@ -12,4 +13,5 @@ import About from "../components/About.astro";
   <Welcome />
   <Works />
   <About />
+  <Experience />
 </Layout>
