--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,5 +1,5 @@
 ---
-import Welcome from "../components/Welcome.astro";
+import Intro from "../components/Intro.astro";
 import Works from "../components/Works.astro";
 import Layout from "../layouts/Layout.astro";
 import About from "../components/About.astro";
@@ -10,8 +10,9 @@ import Experience from "../components/Experience.astro";
 ---
 
 <Layout>
-  <Welcome />
+  <Intro />
   <Works />
   <About />
   <Experience />
+  <div class="h-[400px] w-full"></div>
 </Layout>
