--- a/src/components/experience/Technology.astro
+++ b/src/components/experience/Technology.astro
@@ -9,7 +9,8 @@ const { src } = Astro.props;
 ---
 
 <Image
-  class="aspect-square w-[92px] translate-y-full rounded-xl border border-black/15 bg-white object-contain"
+  class="aspect-square w-[92px] rounded-xl border border-black/15 bg-white object-contain p-3 xl:translate-y-[125%]"
   src={src}
   alt=""
+  loading="eager"
 />
