--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -9,20 +9,14 @@
         <div class="aspect-square h-auto w-[16rem] bg-zinc-200 lg:w-[24rem]">
         </div>
       </div>
-      <div class="@container w-full max-w-[52em]">
+      <div class="container w-full max-w-[52em]">
         <h2
           class="paragraph text-[clamp(1.875rem,3.25vw,3rem)] leading-[1.20] tracking-wide text-black"
         >
-          <!--
-          <h2
-          --
-        >
-          <!--   class="paragraph text-3xl/8 font-light tracking-wide text-black sm:text-4xl/9 lg:text-4xl/9 xl:text-5xl/12" -->
-          <!-- > -->
-          I develop cutting edge technologies in the nonwoven field. Adept at combining
-          mechanical design, automation programming and data analysis to drive results.
-          Experienced in training machine learning models to optimize performance
-          and detect anomalies.
+          I develop cutting edge technologies in the nonwoven field. Adept at
+          combining mechanical design, automation programming and data analysis
+          to drive results. Experienced in training machine learning models to
+          optimize performance and detect anomalies.
         </h2>
       </div>
     </div>
